// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationStep component default 1`] = `
<div
  class="application-step"
>
  <div
    class="application-step__title"
  >
    
        Test title
    
  </div>
   
  <progress-bar-stub
    class="application-step__progress-bar"
    progress="0"
  />
</div>
`;

exports[`ApplicationStep component selected 1`] = `
<div
  class="application-step selected"
>
  <div
    class="application-step__title"
  >
    
        Test title
    
  </div>
   
  <progress-bar-stub
    class="application-step__progress-bar"
    progress="0"
  />
</div>
`;
